--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
     "nanoid": "^3.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -14,9 +15,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://supremeking23.github.io/React-Todo-MDN",
   "eslintConfig": {
     "extends": "react-app"
   },
