--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://supremeking23.github.io/todo-mdn",
+  "homepage" : "https://supremeking23.github.io/todo-mdn",
   "name": "todo-mdn",
   "version": "0.1.0",
   "private": true,
