--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage" : "https://supremeking23.github.io/todo-mdn",
   "name": "todo-mdn",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +12,6 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,7 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  }
+  "devDependencies": {}
 }
